# light

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/sources/: main.cpp
extlibs/luajit-2.0.5/: CMakeLists.txt
light/: CMakeLists.txt
light/include/: light.h  tester.h
light/include/core/: app.h  components.h  lua_api.h  lua_system.h  res_manager.h  system.h
light/include/systems/: sprite_system.h
light/include/systems/imgui/: im_window_system.h
light/sources/: main.cpp  tester.cpp
light/sources/core/: app.cpp  lua_api.cpp  lua_system.cpp  res_manager.cpp
light/sources/systems/: sprite_system.cpp
light/sources/systems/imgui/: im_window_system.cpp
